@@ -5,6 +5,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 	Tom Collins
 	- vpalias: Fix double-free in code ported from 5.5 branch.
+	- valias: exit non-zero on error, send all errors to stderr.
 
 5.4.15 - released 24-Feb-06
 
